--- a/Translation/map.json
+++ b/Translation/map.json
@@ -1462,6 +1462,63 @@
         "th":"",
         "id":""
     },
+    "map.C3_Twisted_Woods_1.name":{
+        "en":"Twisted Woods 1",
+        "fr":"Forêt Frelatée 1",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.C3_Twisted_Woods_2.name":{
+        "en":"Twisted Woods 2",
+        "fr":"Forêt Frelatée 2",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.C3_Anglas Hideout.name":{
+        "en":"Anglas's Hideout",
+        "fr":"Cachette de Anglas",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "map.C3_Twisters_Manor_Hall_Of_Elite.name":{
         "en":"Twister's Manor Floor Hall of Elite",
         "fr":"Manoir Méphitique Hall d'Élite",
