--- a/Translation/map.json
+++ b/Translation/map.json
@@ -1386,6 +1386,25 @@
         "th":"",
         "id":""
     },
+    "map.C3_Twisters_Manor.name":{
+        "en":"Twister's Manor",
+        "fr":"Manoir Méphitique",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "map.C3_Twisters_Manor_Floor_1.name":{
         "en":"Twister's Manor Floor 1",
         "fr":"Manoir Méphitique Étage 1",
@@ -1541,6 +1560,25 @@
     "map.C3_Twisters_Backyard.name":{
         "en":"Twister's Backyard",
         "fr":"Arrière-cour Méphitique",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.C3_Uncharted_Forest.name":{
+        "en":"Uncharted Forest",
+        "fr":"Forêt Inexplorée",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
