--- a/Translation/map.json
+++ b/Translation/map.json
@@ -1747,6 +1747,25 @@
         "th":"",
         "id":""
     },
+    "map.C4_Maelstorm.name":{
+        "en":"Maelstrom",
+        "fr":"Maelstrom",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "map.Challenge_35.name":{
         "en":"Cain Knight's Trial Ground",
         "fr":"Zone d'entrainement des chevaliers de Kane",
