--- a/Translation/map.json
+++ b/Translation/map.json
@@ -296,7 +296,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Hang Celebeam Tầng 1",
+        "vi":"Hang Celebeam - Tầng 1",
         "ar":"",
         "it":"",
         "pl":"",
@@ -315,7 +315,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Hang Celebeam Tầng 2",
+        "vi":"Hang Celebeam - Tầng 2",
         "ar":"",
         "it":"",
         "pl":"",
@@ -334,7 +334,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Hang Celebeam Tầng 3",
+        "vi":"Hang Celebeam - Tầng 3",
         "ar":"",
         "it":"",
         "pl":"",
@@ -353,7 +353,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Hang Celebeam Tầng 4",
+        "vi":"Hang Celebeam - Tầng 4",
         "ar":"",
         "it":"",
         "pl":"",
@@ -372,7 +372,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Hang Celebeam Tầng 5",
+        "vi":"Hang Celebeam - Tầng 5",
         "ar":"",
         "it":"",
         "pl":"",
@@ -429,7 +429,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Celebeam - Điện Tinh Anh Sâu",
+        "vi":"Celebeam - Thâm Điện Tinh Anh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -771,7 +771,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Thành Phố Byron Tầng 1",
+        "vi":"Thành Phố Byron - Tầng 1",
         "ar":"",
         "it":"",
         "pl":"",
@@ -790,7 +790,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Thành Phố Byron Tầng 2",
+        "vi":"Thành Phố Byron - Tầng 2",
         "ar":"",
         "it":"",
         "pl":"",
@@ -809,7 +809,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Thành Phố Byron Tầng 3",
+        "vi":"Thành Phố Byron - Tầng 3",
         "ar":"",
         "it":"",
         "pl":"",
@@ -828,7 +828,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Thành Phố Byron Tầng 4",
+        "vi":"Thành Phố Byron - Tầng 4",
         "ar":"",
         "it":"",
         "pl":"",
@@ -847,7 +847,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Thành Phố Byron Tầng 5",
+        "vi":"Thành Phố Byron - Tầng 5",
         "ar":"",
         "it":"",
         "pl":"",
@@ -904,7 +904,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Thành Phố Byron - Điện Tinh Anh Sâu",
+        "vi":"Thành Phố Byron - Thâm Điện Tinh Anh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1056,7 +1056,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Viêm Ma Tháp - Điện Tinh Anh Sâu",
+        "vi":"Viêm Ma Tháp - Thâm Điện Tinh Anh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1075,7 +1075,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Viêm Ma Tháp Tầng 1",
+        "vi":"Viêm Ma Tháp - Tầng 1",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1398,7 +1398,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Trang Viên Xảo Quyệt",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1417,7 +1417,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Trang Viên Xảo Quyệt Tầng 1",
+        "vi":"Trang Viên Xảo Quyệt - Tầng 1",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1436,7 +1436,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Trang Viên Xảo Quyệt Tầng 2",
+        "vi":"Trang Viên Xảo Quyệt - Tầng 2",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1455,7 +1455,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Trang Viên Xảo Quyệt Tầng 3",
+        "vi":"Trang Viên Xảo Quyệt - Tầng 3",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1474,7 +1474,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Trang Viên Xảo Quyệt Tầng 4",
+        "vi":"Trang Viên Xảo Quyệt - Tầng 4",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1493,7 +1493,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Khu Rừng Xảo Quyệt 1",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1512,7 +1512,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Khu Rừng Xảo Quyệt 2",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1531,7 +1531,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nơi Ẩn Náu Của Anglas",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1550,7 +1550,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Trang Viên Xảo Quyệt - Điện Tinh Anh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1569,7 +1569,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thượng Viên Xảo Quyệt",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1588,7 +1588,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Khu Rừng Thần Bí",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1607,7 +1607,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Khu Rừng Thần Bí Tầng 1",
+        "vi":"Khu Rừng Thần Bí - Tầng 1",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1626,7 +1626,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Khu Rừng Thần Bí Tầng 2",
+        "vi":"Khu Rừng Thần Bí - Tầng 2",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1645,7 +1645,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Khu Rừng Thần Bí Tầng 3",
+        "vi":"Khu Rừng Thần Bí - Tầng 3",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1664,7 +1664,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Khu Rừng Thần Bí Tầng 4",
+        "vi":"Khu Rừng Thần Bí - Tầng 4",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1683,7 +1683,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Khu Rừng Thần Bí Tầng 5",
+        "vi":"Khu Rừng Thần Bí - Tầng 5",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1702,7 +1702,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Khu Rừng Thần Bí - Điện Tinh Anh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1721,7 +1721,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Khu Rừng Thần Bí - Thâm Điện Tinh Anh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1740,7 +1740,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Lối Mòn Thần Bí",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1759,7 +1759,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Maelstrom",
         "ar":"",
         "it":"",
         "pl":"",
