--- a/Translation/item.json
+++ b/Translation/item.json
@@ -5281,6 +5281,25 @@
         "th":"",
         "id":""
     },
+    "item.3089.name":{
+        "en":"[Spirit Egg] Judge of Death",
+        "fr":"[Oeuf d'esprit] Juge de la Mort",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.3801.name":{
         "en":"[Spirit Egg] Immortal",
         "fr":"[Oeuf d'esprit] Immortel",
