--- a/Translation/item.json
+++ b/Translation/item.json
@@ -4932,7 +4932,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Nấm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4951,7 +4951,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Thỏ Con",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4970,7 +4970,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Kappa",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4989,7 +4989,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Hùng Trư",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5008,7 +5008,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Người Sói",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5027,7 +5027,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Thủ Lĩnh Người Sói",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5046,7 +5046,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Độc Trư",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5065,7 +5065,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Dã Trư",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5084,7 +5084,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Mộc Linh Phù Phép",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5093,7 +5093,7 @@
     },
     "item.3079.name":{
         "en":"[Spirit Egg] Cannibal Huha",
-        "fr":"[Oeuf d'esprit] Huba Cannibale",
+        "fr":"[Oeuf d'esprit] Huha Cannibale",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
@@ -5103,7 +5103,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Huha Tộc Săn Người",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5122,7 +5122,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Cá Piranha",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5141,7 +5141,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Điềm Vĩ Yết Sư Hùng Mạnh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5160,7 +5160,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Tử Xà",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5179,7 +5179,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Tiên Lạc Lối",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5198,7 +5198,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Huha Tộc Săn Người",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5217,7 +5217,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Hoa Thiên Hỏa",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5236,7 +5236,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Long Nhân",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5255,7 +5255,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Ma Nữ Đầm Lầy",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5274,7 +5274,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Tiên Nữ Bươm Bướm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -5293,7 +5293,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"[Linh Trứng] Phán Quyết Tử Thần",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6699,7 +6699,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nấm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6718,7 +6718,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thỏ Con",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6737,7 +6737,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Kappa",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6756,7 +6756,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hùng Trư",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6775,7 +6775,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Người Sói",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6794,7 +6794,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thủ Lĩnh Người Sói",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6813,7 +6813,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Độc Trư",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6832,7 +6832,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Dã Trư",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6851,7 +6851,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mộc Linh Phù Phép",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6860,7 +6860,7 @@
     },
     "item.4079.name":{
         "en":"Cannibal Huha",
-        "fr":"Huba Cannibale",
+        "fr":"Huha Cannibale",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
@@ -6870,7 +6870,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Huha Tộc Săn Người",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6889,7 +6889,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cá Piranha",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6908,7 +6908,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Điềm Vĩ Yết Sư Hùng Mạnh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6927,7 +6927,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tử Xà",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6946,7 +6946,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tiên Lạc Lối",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6955,7 +6955,7 @@
     },
     "item.4084.name":{
         "en":"Cannibal Huha",
-        "fr":"Huba Canibale",
+        "fr":"Huha Canibale",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
@@ -6965,7 +6965,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Huha Tộc Săn Người",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6984,7 +6984,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hoa Thiên hỏa",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7003,7 +7003,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Long Nhân",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7022,7 +7022,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Ma Nữ Đầm Lầy",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7041,7 +7041,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tiên Nữ Bươm Bướm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -7060,7 +7060,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Phán Quyết Tử Thần",
         "ar":"",
         "it":"",
         "pl":"",
